I ran the outside-only wearable vs weather data on both the MLP and LR

--- a/weatherdata_upload.ipynb
+++ b/weatherdata_upload.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,9 +24,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "put data into Google Sheet\n"
+     ]
+    }
+   ],
    "source": [
     "  # Put in code to upload to Google Sheets\n",
     "scope = [\"https://www.googleapis.com/auth/drive\"]\n",
@@ -35,7 +43,7 @@
     "client = gspread.authorize(creds)\n",
     "\n",
     "sheet = client.open(\"test_sdsc\").sheet1 # open sheet\n",
-    "data = pd.read_table('weather.txt',delimiter=',',header=None)\n",
+    "data = pd.read_table('~/CSE193/Data_Folder/weather_4_12.txt',delimiter=',',header=None)\n",
     "data = list(data.values.flatten())\n",
     "\n",
     "cell_list = sheet.range('A1:L7159') \n",
