--- a/in_out_classification/in_out_classification.ipynb
+++ b/in_out_classification/in_out_classification.ipynb
@@ -23,6 +23,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### data was collected through the 'GPS tracker' App offered in iOS\n",
+    "#### Three sample days were collected by Lori and then processed using the following code\n",
+    "#### each day collected around 9 hrs of data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -43,25 +52,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "for j in range (len(filename)):\n",
     "    GPS = pd.read_csv(filename[j],delimiter=';',header=0)\n",
+    "    # convert from UTC to US/Pacific timezone\n",
     "    GPS['new_time'] = pd.to_datetime(GPS['timestamp']).dt.tz_convert('US/Pacific').dt.tz_localize(None)\n",
     "    GPS.drop('timestamp',axis=1,inplace=True)\n",
     "    GPS.drop_duplicates(inplace=True)\n",
     "    GPS['dummy'] = 0 # solve the duplicated indices\n",
     "    GPS = GPS.groupby('dummy').apply(lambda x : x.drop_duplicates('new_time')\n",
     "                                          .set_index('new_time')\n",
-    "                                          .resample('10S')\n",
+    "                                          .resample('10S') # resample to every 10s\n",
     "                                          .ffill())\n",
     "    GPS.drop('dummy',axis=1,inplace=True)\n",
     "    GPS = GPS.iloc[1:,:] # drop first null column\n",
     "    \n",
     "    # manually assign label for different conditions\n",
     "    GPS['manual_judgement'] = 0\n",
+    "    # using vertical/horizontal accuracy and speed to classify the condition\n",
     "    for i in range(GPS.shape[0]):\n",
     "        if GPS.iloc[i,5] <= 0:\n",
     "            if GPS.iloc[i,3] >= 50: # would mis-classify when the user is near window ( would be like 30, or 10 ish)\n",
