--- a/in_out_classification/in_out_classification.ipynb
+++ b/in_out_classification/in_out_classification.ipynb
@@ -26,7 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### data was collected through the 'GPS tracker' App offered in iOS\n",
+    "## data was collected through the 'GPS tracker' App offered in iOS\n",
     "#### Three sample days were collected by Lori and then processed using the following code\n",
     "#### each day collected around 9 hrs of data"
    ]
@@ -100,10 +100,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "openmap_26 = pd.read_csv('sep_26.csv')\n",
+    "openmap_27 = pd.read_csv('sep_27.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data was recorded through Andriod app GPS Logger on Oct 7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = ['GPS_logger_Oct_7.txt']\n",
+    "outputname = ['logger_oct_7.xlsx']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(len(filename)):\n",
+    "    logger = pd.read_csv(filename[i],delimiter=',')\n",
+    "    logger.drop(['type','name','desc','bearing(deg)'],axis=1,inplace=True)\n",
+    "    logger['new_time'] = pd.to_datetime(logger['date time']).dt.tz_localize('UTC').dt.tz_convert('US/Pacific').dt.tz_localize(None)\n",
+    "    logger.drop('date time',axis=1,inplace=True)\n",
+    "    logger = logger.resample('10S',on='new_time').mean()\n",
+    "    logger['sat_ratio'] = (logger['sat_used'] / logger['sat_inview']) *1.0\n",
+    "    logger = logger.fillna(-1)\n",
+    "    logger.to_excel(outputname[i])"
+   ]
   }
  ],
  "metadata": {
